# metanfs4

./: CMakeLists.txt  COPYING  MetaNFS4.files  MetaNFS4.includes  README  README.md  UpdateGitVersion
share/: CMakeLists.txt
share/scripts/: CMakeLists.txt  append-domain
share/systemd/: metanfs4.service
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/metanfs4/: common.c  common.h
src/lib/metanfs4_idmap/: CMakeLists.txt  idmap_internal.h  metanfs4_idmap.c  metanfs4_idmap.h
src/lib/metanfs4_nsswitch/: CMakeLists.txt  metanfs4_nsswitch.c  metanfs4_nsswitch.h
